Routing troubles fixed & error rendering complete

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,5 +1,5 @@
-- const profile = globals[0]
-- console.log('layout')
+- const profile = globals [0]
+- const err = globals[1] ? globals[1] : null
 
 doctype html
 html(lang="en")
