--- a/views/main.pug
+++ b/views/main.pug
@@ -1,9 +1,8 @@
 extends layout
 
 block content
-  - console.log('main')
   .bounds.app--body
     include includes/body-header
-    block timeline
-    block following
-    block messages
+    include includes/timeline
+    include includes/following
+    include includes/messages
